# QuickChatGPT

./: LICENSE  README.md  __main__.py  config.py  pyproject.toml  requirements.txt
src/easy_chatgpt/: __init__.py  config.py
src/quick_chatgpt/: __config__.py  __init__.py
workflows/: publish.yml
